<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="data"
            type="com.aliyev.woweather.domain.model.forecast.HourUiModel" />

        <variable
            name="isDay"
            type="Boolean" />

        <variable
            name="localTime"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:context=".presentation.ui.hourly.HourlyFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background='@{isDay ? @drawable/blue_gradient_drawable : @drawable/black_gradient_drawable}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBack"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:icon="@drawable/arrow_left"
                app:iconSize="24dp"
                app:iconTint="@color/white"
                app:iconTintMode="multiply"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_medium"
                android:text="@{data.time}"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonBack" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="24dp"
                load_icon="@{data.condition.icon}"
                app:layout_constraintEnd_toEndOf="@+id/textView26"
                app:layout_constraintStart_toStartOf="@+id/textView26"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_regular"
                android:text='@{data.tempC+"ºC"}'
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView10"
                app:layout_constraintStart_toStartOf="@+id/imageView10"
                app:layout_constraintTop_toBottomOf="@+id/imageView10" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/sf_regular"
                android:text='@{@string/last_refresh +" "+localTime}'
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView27"
                app:layout_constraintStart_toStartOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white_FA"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/humidity_icon"
                        app:layout_constraintBottom_toBottomOf="@+id/textView17"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView18" />


                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/sf_semi_bold"
                        android:text='@{String.valueOf(data.humidity)+"%"}'
                        android:textColor="@color/black_20"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/humidity"
                        android:textColor="@color/grey_49"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView18"
                        app:layout_constraintTop_toBottomOf="@+id/textView18" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white_FA"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/air_pressure_icon"
                        app:layout_constraintBottom_toBottomOf="@+id/textView16"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView" />


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/sf_semi_bold"
                        android:text='@{String.valueOf(data.pressureMb)}'
                        android:textColor="@color/black_20"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/air_pressure"
                        android:textColor="@color/grey_49"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white_FA"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/wind_icon"
                        app:layout_constraintBottom_toBottomOf="@+id/textView23"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView22" />


                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/sf_semi_bold"
                        android:text='@{String.valueOf(data.windKph)+" km/h"}'
                        android:textColor="@color/black_20"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/wind"
                        android:textColor="@color/grey_49"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView22"
                        app:layout_constraintTop_toBottomOf="@+id/textView22" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white_FA"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/fog_icon"
                        app:layout_constraintBottom_toBottomOf="@+id/textView25"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView24" />


                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/sf_semi_bold"
                        android:text="@{String.valueOf(data.precipMm)}"
                        android:textColor="@color/black_20"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView8"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/sf_regular"
                        android:text="@string/fog"
                        android:textColor="@color/grey_49"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView24"
                        app:layout_constraintTop_toBottomOf="@+id/textView24" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
